<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp"
    android:weightSum="4">


    <androidx.cardview.widget.CardView
        android:id="@+id/smartKeyCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:cardBackgroundColor="#555F95"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageViewKey"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/person_phone_touch"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />


            <TextView
                android:id="@+id/nameKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewKey"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/smartkey"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/superKeyCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#9066DB"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageSuperKey"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:elevation="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/a_hand_holding_phone_in_the_style_of_a_cartoon"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />


            <TextView
                android:id="@+id/superKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageSuperKey"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/superkey"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/homeAppCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#555F95"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/homeApplKey"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:elevation="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/group_photo_of_home_appliances"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/homeApplKey"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/home_appliance"
                android:textColor="@color/white"
                android:textSize="10sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/udharCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/udharKey"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:elevation="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/apply_loan_img"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/udharKey"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:text="@string/udhar"
                android:textColor="@color/white"
                android:textSize="10sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>